change to siswa

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pg_basic",
+  "name": "pgnode-crud2",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,8 +11,5 @@
   "dependencies": {
     "express": "^4.17.1",
     "pg": "^8.4.1"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.4"
   }
 }
